src/routes/styles.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

::-webkit-scrollbar {
	width: 3px;	
	height: 3px;
}
::-webkit-scrollbar-track {
	background: transparent;
}
::-webkit-scrollbar-thumb {
	background: rgba(50, 111, 255, 0.15);
	border-radius: 20px;
}
::-webkit-scrollbar-thumb:hover {
	background: rgba(224, 103, 82, 0.5);
}
::-webkit-scrollbar-corner { 
	background: rgba(0,0,0,0);
}

body {
	background-color: #ffffff;
}

@media (min-width: 0) {
	body {
		background-image: 
			url('$lib/images/grain.svg'),
			radial-gradient(
				circle farthest-side at top right,
				#ffb38f 0%, 
				#fff1ec 5%)
			;
		background-repeat: repeat, no-repeat;
		background-blend-mode:overlay, normal;
		background-size: 35%, 100%;
	}

    p {
		font-size: 0.7rem;
		width: 100%;
	} 
	
	a {
		font-size: 0.7rem;
	} 
	
	
	h1 {
		font-size: 2.5rem;
		line-height: 1;
	}
	
	h2 {
		font-size: 1.5rem;
		line-height: 1;
	}

	h4 {
		font-size: 1.5rem;
	}

	.code {
		font-size: 0.8rem;
	}
}

@media (min-width: 350px) {
    p {
		font-size: 0.9rem;
	} 
	
	a {
		font-size: 0.9rem;
	} 
	
	
	h1 {
		font-size: 4.8rem;
		line-height: 1;
	}
	
	h2 {
		font-weight: 450;
		font-size: 2.8rem;
		line-height: 1;
	}

	.code {
		font-size: 0.8rem;
	}
}

@media (min-width: 500px) {

	body {
		background-image: 
			url('$lib/images/grain.svg'),
			radial-gradient(
				circle farthest-side at top right,
				#ffb38f 0%, 
				#fff1ec 10%)
			;
		background-repeat: repeat, no-repeat;
		background-blend-mode:overlay, normal;
		background-size: 35%, 100%;
	}

    p {
		font-size: 0.9rem;
	} 
	
	a {
		font-size: 0.9rem;
	} 
	
	
	h1 {
		font-size: 4rem;
		line-height: 1;
	}
	
	h2 {
		font-weight: 450;
		font-size: 3rem;
		line-height: 1;
	}

	h4 {
		font-size: 2rem;
	}

	.code {
		font-size: 0.9rem;
	}
}

@media (min-width: 800px) {

	p {
		font-size: 1.1rem;
		font-weight: 350;
		width:775px;
	} 

	a {
		font-size: 0.9rem;
	} 
	
	h1 {
		font-size: 5.5rem;
		line-height: 1;
	}
	
	h2 {
		font-weight: 450;
		font-size: 3.5rem;
		line-height: 1;
	}
	.code {
		font-size: 1rem;
	}
}

@media (min-width: 1000px) {

	body {
		background-image: 
			url('$lib/images/grain.svg'),
			radial-gradient(
				circle farthest-side at top right,
				#ffb38f 0%, 
				#fff1ec 20%)
			;
		background-repeat: repeat, no-repeat;
		background-blend-mode:overlay, normal;
		background-size: 35%, 100%;
	}
}

p, li, ol{
	font-family: 'Inter', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
	color: #4A5464;
} 

a {
	font-weight: 400;
	font-family: 'Inter', Arial, Helvetica, sans-serif;
} 

h1 {
	font-family: 'Public Sans', Arial, Helvetica, sans-serif;
	font-weight: 600;
	letter-spacing: -0.025em;
}

h2 {
	font-family: 'Public Sans', Arial, Helvetica, sans-serif;
	font-weight: 500;
	letter-spacing: -0.025em;
}

h3 {
	font-family: 'Public Sans', Arial, Helvetica, sans-serif;
	font-weight: 400;
	color: #0E0F11;
	font-size: 3rem;
	letter-spacing: -0.025em;
}

h4 {
	font-family: 'Public Sans', Arial, Helvetica, sans-serif;
	font-weight: 400;
	color: #0E0F11;
	letter-spacing: -0.025em;
}

.sub {
	font-weight: 200;
	color: rgba(87, 94, 106, 0.517);
	font-size: 1.1rem;
}

h5 {
	font-family: 'Public Sans', Arial, Helvetica, sans-serif;
	font-weight: 400;
	font-size: 1rem;
	color: #4A5464;
}

.code {
	font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
	font-weight: 500;
	color: rgb(240, 117, 29);
}

.datacollect {
	background-image: 
		radial-gradient(
			circle at left,
			#ffc4aa7a 0%, 
			#fff1ec 50%)
		;
	background-repeat: no-repeat;
	background-blend-mode: overlay;
	background-size: 100%;
}

.inline_url {
	font-weight: 500;
}

.inline_url:hover{
	color: rgb(226, 226, 226);
}

